# for display continuity sake please use 2 spaces instead of tabs

2012-05-04 mmichaud <michael.michaud@free.fr>
  * switch back to 3D geometry description in info panel wkt format
    add z value to geometry description in info panel CL format
  * Add a AddGeometryAttributesPlugIn as discussed in this thread
    https://sourceforge.net/mailarchive/forum.php?thread_name=4F9E3579.9020702%40free.fr&forum_name=jump-pilot-devel

2012-05-03 ede
  "a startup overhaul draft"
  * JUMPWorkbench
    - add a stop watch output to STDOUT of the whole startup duration
    - added some messages showing up in splash screen about what is happening during startup
  * PluginManager
    - overall performance enhancement
    - duration output of scan and load of extensions to STDOUT (might be implemented more elegantly later)
    - more detailed status messages to splash screen during startup
    - extension jars now have to reside in lib/ext, subfolders are not searched anymore

2012-05-02 mmichaud <michael.michaud@free.fr>
  * Quick fix of the Class Loading problem in PluginManager (PluginManager
    now skip image files).
  * Implementation of Triangulation and Voronoi diagrams from JTS 1.12

2012-04-30 mmichaud <michael.michaud@free.fr>
  * FR #3221032 Now remember last used "Raster Image (Sextante)" directory
  * FR #3521960 Exporting large dataset in svg format now open a dialog box to
    warn the user that the export may take some times
  
2012-04-29 mmichaud <michael.michaud@free.fr>
  * Clean NoderPlugin et derived mousemenu plugins, replace processing options 
    by enum, update i18n

2012-04-27 mmichaud <michael.michaud@free.fr>
  * Improved/homogenized result layer naming in query tools :
    source layer_[attribute_]operator_[parameter_]value
  * Fixed some missing values in language files
  * FR 3521397/1 : fixed how cancel button of Select Items by Circle from
    Selected Layers dialog works